--- a/html/Experiencia.html
+++ b/html/Experiencia.html
@@ -8,7 +8,7 @@
   </head>
   <body>
    <header>
-    <img src="file:///F:/Desarrollo%20Web/Next_u/Proyecto/img/Yago.svg" width="150px" alt="Y.A.G.O" title="Y.A.G.O">
+    <img src="media/img/Yago.svg" width="150px" alt="Y.A.G.O" title="Y.A.G.O">
    </header>
     <h1>Hoja de vida</h1>
     <h2>Datos Personales</h2>
@@ -21,9 +21,9 @@
       <li><a href="html/Experiencia.html">Experiencia</a></li>
     </ul>
     <h3>Experiencia</h3>
-    <video src="file:///F:/Desarrollo%20Web/Next_u/Proyecto/video/Experiencia.mp4" controls poster="file:///F:/Desarrollo%20Web/Next_u/Proyecto/img/Yonny.jpg" width="400px" height="400px"></video>
+    <video src="media/video/Experiencia.mp4" controls poster="media/img/Yonny.jpg" width="400px" height="400px"></video>
     <h3>Hobbies</h3>
-    <audio src="file:///F:/Desarrollo%20Web/Next_u/Proyecto/audio/Hobbies.wav"controls preload="auto"></audio>
+    <audio src="media/audio/Hobbies.wav"controls preload="auto"></audio>
     <footer>
     <p>Derechos Reservados</p>
       <ul>
