--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
    <header>
-     <img src="file:///F:/Desarrollo%20Web/Next_u/Proyecto/img/Yago.svg" width="150px" alt="Y.A.G.O" title="Y.A.G.O">
+     <img src="html/media/img/Yago.svg" width="150px" alt="Y.A.G.O" title="Y.A.G.O">
    </header>
     <h1>Hoja de vida</h1>
     <h2>Datos Personales</h2>
@@ -19,7 +19,7 @@
       <li><a href="html/Experiencia.html">Experiencia</a></li>
     </ul>
     <h2>Informacion Personal</h2>
-    <img src="img/Yonny.jpg" alt="Yonny Gironza" title="Yonny Gironza" width="200px">
+    <img src="html/media/img/Yonny.jpg" alt="Yonny Gironza" title="Yonny Gironza" width="200px">
     <h2>Perfil</h2>
     <p>Técnico En Mantenimiento Y Ensamble De Computadores con experiencia en el área comercial,<br>tengo conocimientos en electricidad domiciliaria y manejo la parte de Word, Excel, PowerPoint,<br>Access e Internet muy bien y además de instalación de hardware y software.<br>Soy una persona sencilla, colaboradora, de buen carácter, dinámica,<br>tengo excelentes relaciones interpersonales y capacidad de trabajo en equipo.</p>
     <footer>
