--- a/html/Educacion.html
+++ b/html/Educacion.html
@@ -6,7 +6,7 @@
   </head>
   <body>
    <header>
-    <img src="file:///F:/Desarrollo%20Web/Next_u/Proyecto/img/Yago.svg" width="150px" alt="Y.A.G.O" title="Y.A.G.O">
+    <img src="media/img/Yago.svg" width="150px" alt="Y.A.G.O" title="Y.A.G.O">
    </header>
     <h1>Hoja de vida</h1>
     <h2>Datos Personales</h2>
